--- a/special events.html
+++ b/special events.html
@@ -50,34 +50,31 @@
         .event-bar {
             display: flex;
             align-items: center;
-            margin-bottom: 20px;
+            margin-bottom: 30px; /* Increased margin for more spacing */
+            padding: 30px; /* Increased padding for a larger block */
             position: relative;
             z-index: 2;
-            border-radius: 20px;
+            border-radius: 30px; /* Increased border-radius for a rounder shape */
             overflow: hidden;
             background-color: #fff;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Add a subtle shadow for depth */
+            box-shadow: 0 0 15px rgba(0, 0, 0, 0.1); /* Add a subtle shadow for depth */
         }
 
         .event-circle {
-            width: 60px;
-            height: 60px;
+            width: 100px; /* Increased width for a larger circle */
+            height: 100px; /* Increased height for a larger circle */
             border-radius: 50%;
             background-color: #fff;
-            margin-right: 15px;
+            margin-right: 30px; /* Increased margin for more spacing */
             display: flex;
             align-items: center;
             justify-content: center;
             overflow: hidden;
-            box-shadow: 0 0 5px rgba(0, 0, 0, 0.1); /* Add a subtle shadow for depth */
+            box-shadow: 0 0 7px rgba(0, 0, 0, 0.1); /* Add a subtle shadow for depth */
         }
 
         .event-circle span {
-            font-size: 24px;
-        }
-
-        .event-details {
-            flex: 1;
+            font-size: 40px; /* Increased font size for larger text */
         }
 
         /* You can customize the colors and styles further */
@@ -91,6 +88,15 @@
 
         .special-event {
             background-color: #f9f9f9;
+        }
+
+        /* Add custom styles for centering content */
+        .container-center {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            flex-direction: column;
         }
     </style>
 </head>
@@ -154,39 +160,42 @@
         </header>
 
         <!-- Events section starts here -->
-        <div class="event-bar public-event">
-            <div class="event-circle">
-                <!-- You can add an SVG icon or text here for public events -->
-                <span>🌐</span>
+        <div class="container-center">
+            <div class="event-bar public-event">
+                <div class="event-circle">
+                    <!-- You can add an SVG icon or text here for public events -->
+                    <span>🌐</span>
+                </div>
+                <div class="event-details">
+                    <h3>Public Event 1</h3>
+                    <p>Details about the public event.</p>
+                </div>
             </div>
-            <div class="event-details">
-                <h3>Public Event 1</h3>
-                <p>Details about the public event.</p>
+
+            <div class="event-bar private-event">
+                <div class="event-circle">
+                    <!-- You can add an SVG icon or text here for private events -->
+                    <span>🔒</span>
+                </div>
+                <div class="event-details">
+                    <h3>Private Event 2</h3>
+                    <p>Details about the private event.</p>
+                </div>
+            </div>
+
+            <div class="event-bar special-event">
+                <div class="event-circle">
+                    <!-- You can add an SVG icon or text here for special events -->
+                    <span>⭐</span>
+                </div>
+                <div class="event-details">
+                    <h3>Special Event 3</h3>
+                    <p>Details about the special event.</p>
+                </div>
             </div>
         </div>
 
-        <div class="event-bar private-event">
-            <div class="event-circle">
-                <!-- You can add an SVG icon or text here for private events -->
-                <span>🔒</span>
-            </div>
-            <div class="event-details">
-                <h3>Private Event 2</h3>
-                <p>Details about the private event.</p>
-            </div>
-        </div>
-
-        <div class="event-bar special-event">
-            <div class="event-circle">
-                <!-- You can add an SVG icon or text here for special events -->
-                <span>⭐</span>
-            </div>
-            <div class="event-details">
-                <h3>Special Event 3</h3>
-                <p>Details about the special event.</p>
-            </div>
-        </div>
-
+    </div>
 
 <!-- footer section -->
 <footer class="footer_section">
