--- a/index.html
+++ b/index.html
@@ -586,6 +586,8 @@
           </div>
         </div>
         <div>
+          <div style="height: 20px;"></div>
+
           <iframe
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d24686.505685037675!2d-84.55102978196699!3d39.33781733450259!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88404f4a6ab94285%3A0xb99acfafd4c01023!2sFairfield%20Senior%20High%20School!5e0!3m2!1sen!2sus!4v1696562684618!5m2!1sen!2sus"
             width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
