i have uplade and resized the images they are not that bad but there is room for improvment

--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
             <div class="box">
               <div>
                 <div class="">
-                  <img src="images/Tomahawk_Steak_500x286.webp" alt="">
+                  <img src="images/Tomahawk_Steak_500x286.jpg" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
