--- a/menu.html
+++ b/menu.html
@@ -248,7 +248,7 @@
             <div class="box">
               <div>
                 <div class="images">
-                  <img src="images/onion_rings_JPG_500x286.webp" alt="">
+                  <img src="images/xr8vl8whx1mebymyfubi.jpg" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
@@ -338,7 +338,7 @@
             <div class="box">
               <div>
                 <div class="images">
-                  <img src="images/chips_and_guac_JPG_500x286.webp" alt="">
+                  <img src="images/istockphoto-1351167362-612x612.jpg" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
@@ -661,7 +661,7 @@
             <div class="box">
               <div>
                 <div class="images">
-                  <img src="images/Tomahawk_Steak_500x286.webp" alt="">
+                  <img src="images/Tomahawk_Steak_500x286.jpg" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
@@ -709,7 +709,7 @@
             <div class="box">
               <div>
                 <div class="images">
-                  <img src="images/new-york-strip-steak-square-3_500x286.webp" alt="Another Burger Image">
+                  <img src="images/ezgif.com-webp-to-jpg-converter.jpg" alt="Another Burger Image">
                 </div>
                 <div class="detail-box">
                   <h5>
@@ -871,7 +871,7 @@
             <div class="box">
                 <div>
                     <div class="images">
-                        <img src="images/rsz_1pexels-jiri-ikonomidis-13896781.jpg" alt="Another Appetizer Image">
+                        <img src="images/pinacolata.jpg" alt="Another Appetizer Image">
                     </div>
                     <div class="detail-box">
                         <h5>
