--- a/index.html
+++ b/index.html
@@ -611,7 +611,7 @@
 <div class="item">
   <div class="box">
     <div class="detail-box">
-      <p>Game Day Grill is an absolute delight for sports enthusiasts and food lovers alike! From the moment you step in, the vibrant atmosphere creates a perfect game day experience. The staff is not only friendly and attentive but also incredibly knowledgeable about the menu, helping us navigate through their extensive offerings. The diverse menu is a culinary touchdown, featuring a winning combination of classic favorites and innovative twists.</p>
+      <p>Grill perfection! Mouthwatering dishes, expertly cooked. The flavors were on point, and the service was top-notch. A carnivore's paradise!</p>
       <h6>Luis Castellanos Marroquin
       </h6>
       <p></p>
@@ -623,7 +623,7 @@
 <div class="item">
   <div class="box">
     <div class="detail-box">
-      <p>Game Day Grill is a true gem for any sports enthusiast and food lover alike! From the moment you step in, the vibrant atmosphere and lively energy set the perfect tone for a fantastic dining experience. The menu is a winning playbook of delicious options, with each dish delivering a touchdown of flavor. Whether you're a fan of classic pub fare or seeking a modern twist on game day staples, this restaurant has it all.</p>
+      <p>Sizzle and satisfaction! This grill joint nailed it. From the first bite to the last, every dish was a flavor explosion.</p>
       <h6>Lydia Embry
       </h6>
       <p></p>
@@ -636,7 +636,7 @@
   <div class="box">
     <div class="detail-box">
       <p>
-        Game Day Grill is an absolute gem for any sports enthusiast or food lover! From the moment you step in, the vibrant atmosphere filled with cheering fans and the aroma of delicious, sizzling dishes sets the perfect stage for an unforgettable dining experience. </p>
+        Grill magic! Exceptional meats grilled to perfection. The rustic charm of the restaurant combined with the savory delights made for an unforgettable dining experience </p>
       <h6>Srijan Gurung
       </h6>
       <p></p>
