made a terms and conditions page

--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -160,8 +160,16 @@
         </header>
 
 
-<H1>this is a school project</H1>
-
+ <!-- Terms and Conditions section -->
+ <section class="terms_and_conditions">
+  <div class="container">
+      <h2>Terms and Conditions</h2>
+      <p>
+          Welcome to Game Day Grill! Please read our <a href="path/to/terms_and_conditions.pdf" target="_blank">Terms and Conditions</a> carefully.
+      </p>
+      <!-- Add more content or details about your terms and conditions here -->
+  </div>
+</section>
 
         
 <!-- footer section -->
