--- a/team.html
+++ b/team.html
@@ -97,6 +97,7 @@
           <a class="dropdown-item" href="team.html">Team</a>
           <a class="dropdown-item" href="contact.html">Contact</a>
           <a class="dropdown-item" href="special events.html">events</a>
+          <a class="dropdown-item" href="terms-and-conditions.html">Terms and conditions</a>
           <!-- Add more items here as needed -->
         </div>
       </li>
