--- a/index.html
+++ b/index.html
@@ -85,7 +85,9 @@
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMore">
           <a class="dropdown-item" href="team.html">Team</a>
           <a class="dropdown-item" href="contact.html">Contact</a>
-          <a class="dropdown-item" href="special events.html">events</a>
+          <a class="dropdown-item" href="special events.html">Events</a>
+          <a class="dropdown-item" href="terms-and-conditions.html">Terms and conditions</a>
+
           <!-- Add more items here as needed -->
         </div>
       </li>
@@ -131,15 +133,14 @@
       <div class="carousel-item ">
         <div class="container ">
           <div class="row">
-            <img src="images/Chicken Alfredo1.png" alt="">
+            <img src="images/TacoSalad1-removebg-preview.png" alt="">
             <div class="col-md-7 col-lg-6 ">
               <div class="detail-box">
                 <h1>
-                  Grill the Season
-                </h1>
+                  New arrival
+                  </h1>
                 <p>
-                  Limited-time availability of these specials
-                </p>
+                  Indulge in the fresh and vibrant flavors of our Taco Salad! Crisp lettuce, seasoned ground beef, diced tomatoes, shredded cheese, and zesty salsa come together for a delicious fiesta in every bite. Satisfy your cravings with this satisfying and easy-to-love classic. Taco Tuesday, or any day, just got a whole lot tastier!                </p>
                 <div class="btn-box">
                   <a href="menu.html" class="btn1">
                     Order Now
@@ -153,15 +154,14 @@
       <div class="carousel-item">
         <div class="container ">
           <div class="row">
-            <img src="images/BBQ Bacon CHeddar Burger1.jpg" alt="">
+            <img src="images/istockphoto-1351167362-612x612-removebg-preview.png" alt="">
             <div class="col-md-7 col-lg-6 ">
               <div class="detail-box">
                 <h1>
-                  Grill On-Demand
-                </h1>
+                  Dive into Avocado Paradise!
+               </h1>
                 <p>
-                  Delicious Grilled Meals Delivered to Your Doorstep in Minutes.
-                </p>
+                  Elevate your snack game with our irresistible Guacamole! Creamy avocados, zesty lime, diced tomatoes, onions, and a pinch of cilantro create a heavenly blend of flavors. Perfect for dipping, topping, or simply enjoying on its own. Dive into the goodness of fresh, homemade guacamole – a taste of pure avocado perfection                </p>
                 <div class="btn-box">
                   <a href="menu.html" class="btn1">
                     Order Now
