--- a/menu.html
+++ b/menu.html
@@ -91,7 +91,9 @@
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMore">
           <a class="dropdown-item" href="team.html">Team</a>
           <a class="dropdown-item" href="contact.html">Contact</a>
-          <a class="dropdown-item" href="special events.html">events</a>    
+          <a class="dropdown-item" href="special events.html">Events</a>    
+          <a class="dropdown-item" href="terms-and-conditions.html">Terms and conditions</a>
+
           <!-- Add more items here as needed -->
         </div>
       </li>
